--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <link rel="stylesheet" href="frontend/style.css">
     <meta charset="UTF-8">
-    <script src="http://telegram.org/js/telegram-web-app.js"></script>
+    <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tetrix</title>
 </head>
@@ -180,6 +180,6 @@
                 </button>
             </div>    
         </div>
-    <script src="script.js"></script>
+    <script src="frontend/script.js"></script>
 </body>
 </html>
