--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
             <div class="content">
             <div class="screen" id="accountPage" style="display: none;">Account Page</div>
             <div class="screen active" id="lobbyPage">
+                <p>Personal Coins: <span id="lobbyCoins">0</span></p>
+                <p>Total Coins: <span id="totalCoins">0</span></p>
                 <img src="images/logo.png" class="logotip">
             <!--GIF ТЕТРІС ГРИ-->
                 <div class="tetris-container">
