--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 <body>
         <div class="mobile-window">  
             <div class="content">
-            <div class="screen" id="accountPage" style="display: none;">Account Page</div>
+            <div class="screen" id="accountPage" style="display: none;">
+                <img id="userPhoto" src="https://via.placeholder.com/50" alt="User Photo" style="width: 50px; height: 50px; border-radius: 50%;">
+            </div>
             <div class="screen active" id="lobbyPage">
                 <p>Total Coins: <span id="lobbyCoins">0</span></p>
                 <img src="images/logo.png" class="logotip">
